fixed error in nav selectors; fixed js whitespace

--- a/src/sass/base/_navigation.scss
+++ b/src/sass/base/_navigation.scss
@@ -221,7 +221,7 @@ nav {
 			&:last-child {}
 
 			// SUBMENUS
-			&.sub-menu, &.children {
+			ul.sub-menu, ul.children {
 				margin: 0;
 				position: absolute;
 				display: none;
